force-app/main/default/objects/Product2/fields/BodyStyle__c.field-meta.xml
<CustomField>
    <fullName>BodyStyle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body Style</label>
    <length>100</length>
    <type>Text</type>
</CustomField>