force-app/main/default/objects/Product2/fields/CatalogId__c.field-meta.xml
<CustomField>
    <fullName>CatalogId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CatalogId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>