force-app/main/default/objects/Product2/fields/CatalogItem__c.field-meta.xml
<CustomField>
    <fullName>CatalogItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>