force-app/main/default/objects/Product2/fields/FamilyCode__c.field-meta.xml
<CustomField>
    <fullName>FamilyCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>