force-app/main/default/objects/Product2/fields/FamilyDescr__c.field-meta.xml
<CustomField>
    <fullName>FamilyDescr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Descr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>