force-app/main/default/objects/Product2/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>LINCOLN</fullName>
            </value>
            <value>
                <fullName>MERCURY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>