force-app/main/default/objects/Product2/fields/MarketingType__c.field-meta.xml
<CustomField>
    <fullName>MarketingType__c</fullName>
    <label>Marketing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>