force-app/main/default/objects/Product2/fields/OkToOrderDate__c.field-meta.xml
<CustomField>
    <fullName>OkToOrderDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ok To Order Date</label>
    <type>Date</type>
</CustomField>