force-app/main/default/objects/Product2/fields/Selectable__c.field-meta.xml
<CustomField>
    <fullName>Selectable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selectable</label>
    <type>Checkbox</type>
</CustomField>