force-app/main/default/objects/Product2/fields/WERSCode__c.field-meta.xml
<CustomField>
    <fullName>WERSCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WERS Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>