force-app/main/default/objects/Product2/fields/WERSOverrideDescr__c.field-meta.xml
<CustomField>
    <fullName>WERSOverrideDescr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WERS Override Descr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>