force-app/main/default/objects/Product2/fields/WERSSalesDescr__c.field-meta.xml
<CustomField>
    <fullName>WERSSalesDescr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WERS Sales Descr</label>
    <type>TextArea</type>
</CustomField>